# TVLLib

./: .gitignore  CMakeLists.txt  README.md  README.txt  aggregate.cpp  benchmark.h  general_vector_extension.h  tally.h  vector_primitives.h
examples/: aggregation_benchmark.cpp  aggregation_benchmark_2.cpp  benchmark.h  build_aggregation_cmake.sh  build_aggregation_g++.sh  build_examples.sh  libtest.cpp
header/: extension_avx2.h  extension_avx512.h  extension_cuda.h  extension_neon.h  extension_scalar.h  extension_sse.h  extension_tsubasa.h  general_vector_extension.h  iov.h  vector_extension_names.h  vector_extension_structs.h  vector_extensions.h  vector_primitives.h
header/cuda_kernel/: calc_device.cuh
primitives/: create.h  extract.h  logic.h  manipulate.h
scalar/primitives/: calc_scalar.h  compare_scalar.h  extract_scalar.h  io_scalar.h  logic_scalar.h  manipulate_scalar.h
simd/avx2/primitives/: calc_avx2.h  extract_avx2.h  io_avx2.h
simd/avx512/: extension_avx512.h
simd/avx512/primitives/: calc_avx512.h  compare_avx512.h  create_avx512.h  io_avx512.h  manipulate_avx512.h
simd/neon/primitives/: compare_neon.h  create_neon.h  io_neon.h  logic_neon.h
simd/sse/primitives/: compare_sse.h  create_sse.h  io_sse.h  logic_sse.h  manipulate_sse.h
vector/: general_vector_extension.h  preprocessor.h  tally.h  type_helper.h  vector_extension_names.h  vector_extension_structs.h  vector_primitives.h
vector/primitives/: calc.h  compare.h  create.h  extract.h  io.h  logic.h  manipulate.h
vector/scalar/: extension_scalar.h
vector/simd/avx2/: extension_avx2.h
(+47 files in other folders)
